# WISER_Optimization_VG

./: .gitignore  LICENSE.txt  README.md  demo.ipynb  pyproject.toml  requirements.txt
_experiments/: analysis109.ipynb  analysis109hw.ipynb  analysis31_one_run.ipynb  analysis31_step3_TwoLocal.ipynb  analysis31_step3_bfcd.ipynb  analysis31_step3_qaoa.ipynb  analysis31_step4_TwoLocal.ipynb  analysis31_step4_bfcd.ipynb  analysis31hw_one_run.ipynb  doe.py  doe_localsearch.py  paper_simul_time1000.ipynb  qubit_convergence109.ipynb  read_experiments.ipynb  sbo_step4.py  sbo_step4_modular.py  sbo_steps1to3.py  sbo_steps1to3_additional_layer.py  sbo_steps1to3_hw.py  sbo_steps1to3_modular.py  sbo_steps1to4.ipynb  transp_and_calib.ipynb  transp_and_calib2.ipynb  transpilation109bilin.ipynb  transpilation109bilinNEW.ipynb  transpilation109colorNEW.ipynb  transpilation_summary.ipynb
data/: README.md
data/1/31bonds/: TwoLocal1rep_piby3_AerSimulator_0.1_0.pkl  docplex-bin-avgonly-nocplexvars.lp  docplex-bin-avgonly.lp  docplex-bin-minmaxavg.lp  docplex.lp  docplex.sol
data/1/31bonds/bfcd3rep_piby3_AerSimulator_0.2/: exp0.pkl  isa_ansatz.qpy
data/1/full/: docplex-full-reduced-nosemi.lp  docplex-orig.sol
misc/: qiskit-assistant-demo.ipynb  walktrough.md
misc/serverless/without_image/: create_serverless.py
src/: experiment.py  plots.py  runner.py  serverless_runner.py  step_1.py
src/sbo/src/: __init__.py  constants.py  version.py
src/sbo/src/_converters/: __init__.py  flip_problem_sense.py  inequality_to_equality.py  integer_to_binary.py  linear_equality_to_penalty.py  linear_inequality_to_penalty.py  quadratic_program_converter.py  quadratic_program_to_qubo.py
src/sbo/src/_problems/: __init__.py  constraint.py  exceptions.py  linear_constraint.py  linear_expression.py  quadratic_constraint.py  quadratic_expression.py  quadratic_objective.py  quadratic_program.py  quadratic_program_element.py  substitute_variables.py  variable.py
src/sbo/src/_translators/: __init__.py  docplex_mp.py  ising.py  prettyprint.py
src/sbo/src/optimizer/: local_search.py  nft.py  optimization_monitor.py  optimization_wrapper.py
src/sbo/src/patterns/building_blocks/: step_1.py  step_2.py  step_3.py  step_4.py
src/sbo/src/patterns/functions/: optimization_function.py
src/sbo/src/utils/: __init__.py  lp_parser.py  lp_utils.py  utils.py
