[tool.poetry]
name = "wiser-optimization-vg"
version = "0.1.0"
description = ""
authors = ["zeapsu <andryypaez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiobotocore = "^2.23.2"
aiohappyeyeballs = "^2.6.1"
aiohttp = "^3.12.14"
aiohttp-cors = "^0.8.1"
aioitertools = "^0.12.0"
aiosignal = "^1.4.0"
annotated-types = "^0.7.0"
asttokens = "^3.0.0"
attrs = "^25.3.0"
cffi = "^1.17.1"
charset-normalizer = "^3.4.2"
click = "^8.2.1"
colorful = "^0.5.7"
comm = "^0.2.3"
cryptography = "^45.0.5"
decorator = "^5.2.1"
deprecated = "^1.2.18"
dill = "^0.4.0"
distlib = "^0.4.0"
executing = "^2.2.0"
filelock = "^3.18.0"
frozenlist = "^1.7.0"
fsspec = "^2025.7.0"
google-api-core = "^2.25.1"
google-auth = "^2.40.3"
googleapis-common-protos = "^1.70.0"
grpcio = "^1.74.0"
ibm-cloud-sdk-core = "^3.24.2"
ibm-platform-services = "^0.68.1"
idna = "^3.10"
ipywidgets = "^8.1.7"
jedi = "^0.19.2"
jinja2 = "^3.1.6"
jmespath = "^1.0.1"
jsonschema = "^4.25.0"
jsonschema-specifications = "^2025.4.1"
jupyterlab-widgets = "^3.0.15"
linkify-it-py = "^2.0.3"
markdown-it-py = "^3.0.0"
markupsafe = "^3.0.2"
matplotlib-inline = "^0.1.7"
mdit-py-plugins = "^0.4.2"
mdurl = "^0.1.2"
memray = "^1.17.2"
mpmath = "^1.3.0"
msgpack = "^1.1.1"
multidict = "^6.6.3"
numpy = "^2.3.2"
opencensus = "^0.11.4"
packaging = "^25.0"
pandas = "^2.3.1"
parso = "^0.8.4"
pbr = "^6.1.1"
pexpect = "^4.9.0"
pip = "^25.1.1"
platformdirs = "^4.3.8"
prometheus-client = "^0.22.1"
prompt-toolkit = "^3.0.51"
propcache = "^0.3.2"
proto-plus = "^1.26.1"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.3"
py-spy = "^0.4.0"
pyasn1 = "^0.6.1"
pyasn1-modules = "^0.4.2"
pycparser = "^2.22"
pydantic = "^2.11.7"
pygments = "^2.19.2"
pyjwt = "^2.10.1"
pyspnego = "^0.11.2"
python-dateutil = "^2.9.0.post0"
pytz = "^2025.2"
pyyaml = "^6.0.2"
qiskit = "^2.1.1"
qiskit-ibm-runtime = "^0.40.1"
qiskit-serverless = "^0.25.2"
ray = "^2.48.0"
referencing = "^0.36.2"
requests = "^2.32.4"
requests-ntlm = "^1.3.0"
rich = "^14.1.0"
rpds-py = "^0.26.0"
rsa = "^4.9.1"
rustworkx = "^0.16.0"
s3fs = "^2025.7.0"
scipy = "^1.16.0"
setuptools = "^80.9.0"
six = "^1.17.0"
smart-open = "^7.3.0.post1"
stack-data = "^0.6.3"
stevedore = "^5.4.1"
sympy = "^1.14.0"
textual = "^5.0.1"
tqdm = "^4.67.1"
traitlets = "^5.14.3"
typing-extensions = "^4.14.1"
tzdata = "^2025.2"
uc-micro-py = "^1.0.3"
urllib3 = "^2.5.0"
virtualenv = "^20.32.0"
wcwidth = "^0.2.13"
websocket-client = "^1.8.0"
widgetsnbextension = "^4.0.14"
wrapt = "^1.17.2"
yarl = "^1.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
