[tool.poetry]
name = "wiser-optimization-vg"
version = "0.1.0"
description = ""
authors = ["zeapsu <andryypaez@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0" 
aiobotocore = "^2.15.2"
aiohappyeyeballs = "^2.4.4"
aiohttp = "^3.11.10"
aiohttp-cors = "^0.7.0"
aioitertools = "^0.12.0"
aiosignal = "^1.3.2"
annotated-types = "^0.7.0"
asttokens = "^3.0.0"
attrs = "^24.3.0"
botocore = "^1.35.36"
cffi = "^1.17.1"
charset-normalizer = "^3.4.0"
click = "^8.1.7"
colorful = "^0.5.6"
comm = "^0.2.2"
cryptography = "^44.0.0"
decorator = "^5.1.1"
deprecated = "^1.2.15"
dill = "^0.3.9"
distlib = "^0.3.9"
executing = "^2.1.0"
filelock = "^3.16.1"
frozenlist = "^1.5.0"
fsspec = "^2024.10.0"
google-api-core = "^2.24.0"
google-auth = "^2.37.0"
googleapis-common-protos = "^1.66.0"
grpcio = "^1.68.1"
ibm-cloud-sdk-core = "^3.22.0"
ibm-platform-services = "^0.59.0"
idna = "^3.10"
ipython = "^8.30.0"
ipywidgets = "^8.1.5"
jedi = "^0.19.2"
jinja2 = "^3.1.4"
jmespath = "^1.0.1"
jsonschema = "^4.23.0"
jsonschema-specifications = "^2024.10.1"
jupyterlab-widgets = "^3.0.13"
linkify-it-py = "^2.0.3"
markdown-it-py = "^3.0.0"
markupsafe = "^3.0.2"
matplotlib-inline = "^0.1.7"
mdit-py-plugins = "^0.4.2"
mdurl = "^0.1.2"
memray = "^1.15.0"
mpmath = "^1.3.0"
msgpack = "^1.1.0"
multidict = "^6.1.0"
numpy = "^2.2.0"
opencensus = "^0.11.4"
packaging = "^24.2"
pandas = "^2.2.3"
parso = "^0.8.4"
pbr = "^6.1.0"
pexpect = "^4.9.0"
pip = "^24.3.1"
platformdirs = "^4.3.6"
prometheus-client = "^0.21.1"
prompt-toolkit = "^3.0.48"
propcache = "^0.2.1"
proto-plus = "^1.25.0"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.3"
py-spy = "^0.4.0"
pyasn1 = "^0.6.1"
pyasn1-modules = "^0.4.1"
pycparser = "^2.22"
pydantic = "^2.9.2"
pygments = "^2.18.0"
pyjwt = "^2.10.1"
pyspnego = "^0.11.2"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.2"
pyyaml = "^6.0.2"
qiskit = "1.3.1"
qiskit-ibm-runtime = "^0.34.0"
qiskit-serverless = "0.18.1"
ray = "^2.34.0"
referencing = "^0.35.0"
requests = "^2.32.3"
requests-ntlm = "^1.3.0"
rich = "^13.9.4"
rpds-py = "^0.22.3"
rsa = "^4.9"
rustworkx = "^0.15.1"
s3fs = "^2024.10.0"
scipy = "^1.14.1"
setuptools = "^75.6.0"
six = "^1.17.0"
smart-open = "^7.0.5"
stack-data = "^0.6.3"
stevedore = "^5.4.0"
sympy = "^1.13.3"
textual = "^1.0.0"
tqdm = "^4.67.1"
traitlets = "^5.14.3"
typing-extensions = "^4.12.2"
tzdata = "^2024.2"
uc-micro-py = "^1.0.3"
urllib3 = "^2.2.3"
virtualenv = "^20.28.0"
wcwidth = "^0.2.13"
websocket-client = "^1.8.0"
widgetsnbextension = "^4.0.13"
wrapt = "^1.17.0"
yarl = "^1.18.3"
zipp = "^3.19.1"
docplex = "^2.30.251"
qiskit-aer = "^0.17.1"
seaborn = "^0.13.2"
qiskit-optimization = { extras = ["cplex"], version = "^0.6.1" }
qiskit-ibm-catalog = "0.2.0"
numba = "^0.61.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
